--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -131,7 +131,7 @@
                                         </div>
                                         <div class="extra content">
                                             <strong>
-                                                <a href="#">K9 TO BE ACQUIRED</a>
+                                                <a href="{% url 'planningandacquiring:add_procured_k9'% ">K9 ACQUISITION COUNTDOWN</a>
                                             </strong>
                                         </div>
                                     </div>
