--- a/profiles/templates/profiles/operations_dashboard.html
+++ b/profiles/templates/profiles/operations_dashboard.html
@@ -7,7 +7,7 @@
 <div class="container fluid">
     <div class="ui two column grid">
       <div class="streched row">
-        <div class="nine wide column"  style="padding-right: 0%;">
+        <div class="ten wide column"  style="padding-right: 0%;">
           <div class="ui basic segment">
             <div class="ui stackable grid">
                 <div class="sixteen wide column">
@@ -119,8 +119,19 @@
             </div>
         </div>
         </div>
-        <div class="seven wide column" style="padding: 0%;padding-right: 1%;">
-            <div class="ui basic segment"> 
+        <div class="six wide column" style="padding: 0%;padding-right: 1%;">
+            <div class="ui basic segment" style="padding-left:0%;"> 
+                <div class="ui raised segment center aligned">
+                        <div class="ui horizontal statistic">
+                            <div class="value">
+                                <i class="bus blue icon"></i>
+                                {n}
+                            </div>
+                            <div class="label">
+                                Events that need action?
+                            </div>
+                        </div>
+                </div>
               <div class="ui inverted segment">
                 <h4>Calendar</h4>
               </div>
