--- a/profiles/templates/profiles/team_leader_dashboard.html
+++ b/profiles/templates/profiles/team_leader_dashboard.html
@@ -92,7 +92,8 @@
               </div>
               <div class="column">
                   <div class="ui raised segment">
-
+                      <strong>Team</strong>
+                      <p> {{ta.team}}</p>
                     </div>
                 </div>
           </div>
@@ -161,8 +162,8 @@
         <div class="ui basic segment" style="padding-left: 0%;">
             {% if k9 %}
             <h4>Port</h4>
-            <p>{{ta}}</p>
-            <h4>K9 Details</h4> <span>{{ta.team_leader.k9}}</span>
+            <p>{{ta.location}}</p>
+           <strong>K9 : {{k9}}</strong> 
             <table class="ui very basic four column table">
             <thead>
 
