--- a/profiles/templates/profiles/commander_dashboard.html
+++ b/profiles/templates/profiles/commander_dashboard.html
@@ -16,10 +16,10 @@
                                 <div class="ui blue statistic">
                                     <div class="value">
                                         <i class="calendar check blue icon"></i>
-                                        {n}
+                                        {{pending_sched}}
                                     </div>
                                     <div class="label">
-                                        <a href="#">Pending Event Request</a>
+                                        <a href="{% url 'deployment:request_dog_list'%}">Pending Event Request</a>
                                     </div>
                                   </div>
                             </div>
