--- a/deployment/templates/deployment/request_dog_list.html
+++ b/deployment/templates/deployment/request_dog_list.html
@@ -1,111 +1,82 @@
 {% extends "profiles/sidebar_deployment.html" %}
 
 {% block content %}
-<div class="ui segment" style="padding:20px;">
-    <h2 class="ui header">
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
-  <link rel="stylesheet" type="text/css" href="{'% static 'cal/css/styles.css' %}">
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<div class="ui inverted segment" style="padding:20px;">
+    <h2 class="ui inverted header">
         K9 Request List
         <div class="sub header">Select a request to start scheduling k9 units.</div>
     </h2>
 </div>
 
-<div class = "ui segment">
-<table id="tabledata" class="ui small celled table">
+<div class="ui top attached tabular menu">
+    <a class="item active" data-tab="first">Pending</a>
+    <a class="item" data-tab="second">Approved</a>
+</div>
+<div class = "ui tab segment active" data-tab="first">
+    <table class="ui small celled table" id="tabledata1">
         <thead>
-            <tr>
-                <th>Start date</th>
-                <th>End date</th>
-                <th>Duration</th>
-                <th>Requester</th>
-                <th>Event Name</th>
-
-                <th>Place</th>
-                <th>K9s Requested</th>
-                <th>K9s Scheduled</th>
-                <th>Status</th>
-                <th></th>
-            </tr>
+            <th class="two wide">Start date</th>
+            <th class="two wide">End date</th>
+            <th>Duration</th>
+            <th>Requester</th>
+            <th>Event Name</th>
+            <th>Place</th>
+            <th class="one wide">K9s Requested</th>
+            <th class="one wide">K9s Scheduled</th>
+            <th></th>
         </thead>
         <tbody>
-            {% for Data in data %}
-                {% if Data.status == "Pending" %}
-                    <tr>
-                        <td>{{Data.start_date}}</td>
-                        <td>{{Data.end_date}}</td>
-                         <td>{{Data.duration}} days</td>
-                        <td>{{Data.requester}}</td>
-                        <td>{{Data.event_name}}</td>
-                        <td>{{Data.location}}</td>
-                        <td>{{Data.k9s_needed}}</td>
-                        <td>{{Data.k9s_deployed}}</td>
-
-                        <td><center><i class="attention icon"></i>{{Data.status}}</center></td>
-                        <td style="text-align:center;">
-                            <a href="{% url 'deployment:request_dog_details' Data.id %}" class = "tiny ui blue basic button">Select</a>
-                        </td>
-                    </tr>
-                {% elif Data.status == "Approved" %}
-                    <tr class = "positive">
-                        <td>{{Data.start_date}}</td>
-                         <td>{{Data.end_date}}</td>
-                        <td>{{Data.duration}} days</td>
-                        <td>{{Data.requester}}</td>
-                        <td>{{Data.event_name}}</td>
-                        <td>{{Data.location}}</td>
-                        <td>{{Data.k9s_needed}}</td>
-
-                        <td>{{Data.k9s_deployed}}</td>
-
-                        <td><center><i class="checkmark icon"></i>{{Data.status}}</center></td>
-
-                        <td style="text-align:center;">
-                            <a href="{% url 'deployment:request_dog_details' Data.id %}" class = "tiny ui blue basic button">Select</a>
-                        </td>
-                    </tr>
-
-                {% elif Data.status == "Denied" %}
-                    <tr class = "error">
-                        <td>{{Data.start_date}}</td>
-                        <td>{{Data.end_date}}</td>
-                        <td>{{Data.duration}} days</td>
-                        <td>{{Data.requester}}</td>
-                        <td>{{Data.event_name}}</td>
-                        <td>{{Data.location}}</td>
-                        <td>{{Data.k9s_needed}}</td>
-                        <td>{{Data.k9s_deployed}}</td>
-                        <td><center><i class="attention icon"></i>{{Data.status}}</center></td>
-                        <td style="text-align:center;">
-                            <a href="{% url 'deployment:request_dog_details' Data.id %}" class = "ui disabled button">Select</a>
-                        </td>
-                    </tr>
-
-                {%else%}
-                <tr>
-                        <td>{{Data.start_date}}</td>
-                        <td>{{Data.end_date}}</td>
-                        <td>{{Data.requester}}</td>
-                        <td>{{Data.duration}} days</td>
-                        <td>{{Data.requester}}</td>
-                        <td>{{Data.event_name}}</td>
-                        <td>{{Data.location}}</td>
-                        <td>{{Data.total_dogs_demand}}</td>
-
-                        <td>{{Data.total_dogs_deployed}}</td>
-                        <td><center><i class="attention icon"></i>{{Data.status}}</center></td>
-
-                        <td style="text-align:center;">
-                            <a href="{% url 'deployment:request_dog_details' Data.id %}" class = "tiny ui blue basic button">Select</a>
-                        </td>
-                </tr>
-                {% endif %}
-
-            {% endfor %}
+            {% for Data in data1 %}
+            <tr>
+                <td>{{Data.start_date | date:'Y-m-d'}}</td>
+                <td>{{Data.end_date| date:'Y-m-d'}}</td>
+                    <td>{{Data.duration}} days</td>
+                <td>{{Data.requester}}</td>
+                <td>{{Data.event_name}}</td>
+                <td>{{Data.location}}</td>
+                <td>{{Data.k9s_needed}}</td>
+                <td>{{Data.k9s_deployed}}</td>
+                <td style="text-align:center;">
+                    <a href="{% url 'deployment:request_dog_details' Data.id %}" class = "tiny ui blue basic button">Select</a>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+<div class = "ui tab segment" data-tab="second">
+    <table class="ui small celled table" id="tabledata1">
+        <thead>
+            <th class="two wide">Start date</th>
+            <th class="two wide">End date</th>
+            <th>Duration</th>
+            <th>Requester</th>
+            <th>Event Name</th>
+            <th>Place</th>
+            <th class="one wide">K9s Requested</th>
+            <th class="one wide">K9s Scheduled</th>
+            <th></th>
+        </thead>
+        <tbody>
+            {% for Data in data2 %}
+            <tr>
+                <td>{{Data.start_date | date:'Y-m-d'}}</td>
+                <td>{{Data.end_date| date:'Y-m-d'}}</td>
+                    <td>{{Data.duration}} days</td>
+                <td>{{Data.requester}}</td>
+                <td>{{Data.event_name}}</td>
+                <td>{{Data.location}}</td>
+                <td>{{Data.k9s_needed}}</td>
+                <td>{{Data.k9s_deployed}}</td>
+                <td style="text-align:center;">
+                    <a href="{% url 'deployment:request_dog_details' Data.id %}" class = "tiny ui blue basic button">Select</a>
+                </td>
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
 </div>
@@ -113,9 +84,12 @@
 <script type="text/javascript">
 
 	$(document).ready(function() {
-		$('#tabledata').DataTable( {
+		$('#tabledata1').DataTable( {
         "order": [[ 0, "asc" ]]
-    });
+        });
+        $('#tabledata2').DataTable( {
+        "order": [[ 0, "asc" ]]
+        });
 		$('.menu .item').tab();
 	});
 </script>
