--- a/unitmanagement/templates/unitmanagement/k9_mia_list.html
+++ b/unitmanagement/templates/unitmanagement/k9_mia_list.html
@@ -22,23 +22,27 @@
             <tr>
                 <th>K9</th>
                 <th>Handler</th>
+                <th>Port/Event</th>
+                <th>Date</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            {% for data in k9_mia %}
+            {% for data in k9_list %}
             <tr>
-                <td>{{data}}</td>
-                <th>{{data.handler}}</th>
-                <td style="text-align:center;" class="two wide">
-                    <a href="#" class="ui tiny basic blue button">Select</a>
+                <td class="two wide">{{data.0}}</td>
+                <td class="two wide">{{data.0.handler}}</td>
+                <td>{{data.1}}</td>
+                <td class="two wide">{{data.2.date_pulled|date:'Y-m-d'}}</td>
+                <td style="text-align:center;" class="three wide">
+                    <a href="{% url 'unitmanagement:k9_mia_change' data.0.id %}?status=late" class="ui tiny basic orange button">Late</a>
+                    <a href="{% url 'unitmanagement:k9_mia_change' data.0.id %}?status=missing" class="ui tiny basic red button">Missing</a>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
-
 
 <script type="text/javascript">
 
@@ -47,6 +51,8 @@
              "order": [[ 0, "desc" ]]
         });
         $('.menu .item').tab();
+
+
 
     });
 
