--- a/unitmanagement/templates/unitmanagement/vaccination_list.html
+++ b/unitmanagement/templates/unitmanagement/vaccination_list.html
@@ -202,25 +202,25 @@
     $(document).ready(function() {
     
         $('#tabledata1').DataTable({
-            "order": [[ 1, "asc" ]]
+            "order": [[ 1, "desc" ]]
         });
         $('#tabledata2').DataTable({
-            "order": [[ 1, "asc" ]]
+            "order": [[ 1, "desc" ]]
         });
         $('#tabledata3').DataTable({
-            "order": [[ 1, "asc" ]]
+            "order": [[ 1, "desc" ]]
         });
         $('#tabledata4').DataTable({
-            "order": [[ 1, "asc" ]]
+            "order": [[ 1, "desc" ]]
         });
         $('#tabledata5').DataTable({
-            "order": [[ 1, "asc" ]]
+            "order": [[ 1, "desc" ]]
         });
         $('#tabledata6').DataTable({
-            "order": [[ 1, "asc" ]]
+            "order": [[ 1, "desc" ]]
         });
         $('#tabledata7').DataTable({
-            "order": [[ 1, "asc" ]]
+            "order": [[ 1, "desc" ]]
         });
         $('.menu .item').tab();
     
