--- a/profiles/templates/profiles/vet_dashboard.html
+++ b/profiles/templates/profiles/vet_dashboard.html
@@ -225,8 +225,7 @@
                                             <i class="calendar alternate orange icon">{{health_pending}}</i>
                                         </div>
                                         <div class="label">
-                                        <a href="{% url
-                                        'unitmanagement:k9_checkup_pending'%}">PHEX TO BE SCHEDULED</a>
+                                        <a href="{% url 'unitmanagement:k9_checkup_pending'%}">PHEX TO BE SCHEDULED</a>
                                         </div>
                                     </div>
                                 </div>
