--- a/profiles/templates/profiles/notification_list.html
+++ b/profiles/templates/profiles/notification_list.html
@@ -19,8 +19,7 @@
         </div>
 
         <div class="ui very basic tab segment active" data-tab="first">
-                {% for notif_data in notif_data%}
-                {% if notif_data.notif_type != "location_incident" or notif_data.notif_type != "request_dog"%}
+                {% for notif_data in um_notif%}
                 {% if notif_data.viewed == True%}
                 <div class="ui orange message" style='opacity: 0.5;'>
                         <div class="ui feed">
@@ -53,14 +52,12 @@
                         </div>
         
                     </div>
-                {% endif %}
                 {% endif %}
                 {% endfor%}
 
         </div>
         <div class="ui very basic tab segment" data-tab="second">
-                {% for notif_data in notif_data%}
-                {% if notif_data.notif_type == "location_incident" or notif_data.notif_type == "request_dog" %}
+                {% for notif_data in dept_notif %}
                 {% if notif_data.viewed == True%}
                 <div class="ui orange message" style='opacity: 0.5;'>
                         <div class="ui feed">
@@ -93,7 +90,6 @@
                         </div>
         
                     </div>
-                {% endif %}
                 {% endif %}
                 {% endfor%}
         </div>
